--- a/app/views/products/admin_show.html.erb
+++ b/app/views/products/admin_show.html.erb
@@ -24,7 +24,7 @@
 				<br><%= @product.genre_id %>
 				<br><%= @product.product_status_i18n %>
 				<br><span>¥</span><%= @product.price %><span>（税抜き価格）</span>
-				<br>在庫数 : <%= %>
+				<br>在庫数 : 
 			</div>
 			<div class="row lead">
 				<br><ins><%= link_to '在庫追加', "#" %></ins><span>  / </span><ins><%= link_to '編集', edit_product_path %></ins><span>  /  </span><ins><%= link_to '削除', "#" %></ins>
