--- a/app/views/shared/_header_user_after_login.html.erb
+++ b/app/views/shared/_header_user_after_login.html.erb
@@ -21,7 +21,7 @@
 						<%= link_to "ホーム", root_path %>
 					</div>
 					<div class="col-xs-3">
-						<%= link_to "マイページ", "#" %>  <!-- リンク先直す -->
+						<%= link_to "マイページ", "" %>  <!-- リンク先直す -->
 					</div>
 					<div class="col-xs-3">
 						<span class="glyphicon glyphicon-shopping-cart"></span>
