--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -43,7 +43,7 @@
 
       <div class="field">
           <label>ステータス</label>
-          <%= f.select :product_status, [["販売中", 0], ["販売停止中", 1]], :prompt => "選択してください" %>
+          <%= f.select :product_status, [["販売中", "on_sale"], ["販売停止中", "not_on_sale"]], :prompt => "選択してください" %>
       </div>
     <%= f.submit '完了', class: 'btn btn-primary btn-block' %>
     <% end %>
