--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header_user_after_login' %>
+
 <h1>ショッピングカート</h1>
 <div class="col-xs-9">
     <% @cart_items.each do |cart_item| %>
