--- a/app/views/end_users/unsubscribe.html.erb
+++ b/app/views/end_users/unsubscribe.html.erb
@@ -19,6 +19,6 @@
 		<p class="bg-danger">以後、同じメールアドレスで再登録した場合でも、<br>以前利用していた情報は復元されません。</p>
 	</div>
 	<div class="btn-group col-md-6 col-md-offset-3 ">
-		<button type="button" class="btn btn-danger text-center">退会する</button>
+		<button type="button" class="btn btn-danger text-center submit">退会する</button>
 	</div>
 </div>
