--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,7 +25,13 @@
 	<% end %>
 
 <!-- フッター -->
-<%= render "shared/footer_user" %>
+<% if end_user_signed_in? %>
+<%= render "shared/footer_user_after_login" %>
+<% else %>
+<%= render "shared/footer_user_before_login" %>
+<% end %>
+<!-- フッダー -->
+
 
 
 
