--- a/app/views/shared/_footer_admin.html.erb
+++ b/app/views/shared/_footer_admin.html.erb
@@ -4,7 +4,8 @@
 		<div class="row">
 			<div class="col-xs-4"></div>
 			<div class="col-xs-4">
-				<%= link_to image_tag('logo.png', :size => '200x100'), root_path %> <!-- ロゴ表示 -->
+				<%= link_to image_tag('logo.png', :size => '250x100'), admin_root_path %> <!-- ロゴ表示 -->
 			</div>
+			<div class="col-xs-4"></div>
 	    </div>
 </footer>
