--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -2,12 +2,12 @@
 <header class="container-fluid page-header">
 	<div class="row row-eq-height">
 		<div class="col-xs-3 height-100">
-			<%= link_to image_tag('logo.png', :size => '200x100'), root_path %>
+			<%= link_to image_tag('logo.png', :size => '250x100'), root_path %>
 		</div>
 		<div class=" col-xs-4">
             <div class="col-xs-4">
             	<div class="searchbox">
-			    	<%= search_form_for @q, url: root_path do |f| %>
+			    	<%= search_form_for @q, url: admin_root_path do |f| %>
 			    	<%= f.text_field :cd_name_cont,placeholder: '検索する商品名を入力...' %>
                     <%= f.submit %>
 			    </div>
@@ -18,10 +18,10 @@
 			<div class="row">
 			   <div class="col-xs-3"><%= link_to "注文依頼", admin_order_histories_path %></div>
 			   <div class="col-xs-3"><%= link_to "入荷履歴", arrival_histories_path %></div>
-		       <div class="col-xs-3"><%= link_to "新規商品追加", "#" %></div>
+		       <div class="col-xs-3"><%= link_to "新規商品追加", new_product_path %></div>
 		       <div class="col-xs-3"><%= link_to "問い合わせ", "#" %></div> <!-- 未実装の為リンクなし -->
                <div class="col-xs-4"><%= link_to "商品一覧", admin_products_path %></div>
-			   <div class="col-xs-4"><%= link_to "ユーザー一覧", "#" %></div>
+			   <div class="col-xs-4"><%= link_to "ユーザー一覧", end_users_path %></div>
 		       <div class="col-xs-4"><%= link_to "ログアウト", destroy_end_user_session_path, method: :delete %></div>
 		</div>
     </div>
