--- a/app/views/end_users/show.html.erb
+++ b/app/views/end_users/show.html.erb
@@ -94,7 +94,7 @@
           <p><%= "〒#{address.postal_code_1}-#{address.postal_code_2}" %></p>
           <p><%= address.address %></p>
           <p><%= address.telephone_number %></p>
-          <%= link_to "編集", edit_address_path, :style => "float: left;" %>|
+          <%= link_to "編集", edit_address_path(address.id), :style => "float: left;" %>|
           <%= link_to "削除", address_path(address.id), method: :delete, :style => "display: inline-block" %>
         </div>
       </div>
