--- a/app/views/end_users/edit.html.erb
+++ b/app/views/end_users/edit.html.erb
@@ -1,3 +1,11 @@
+<!-- ヘッダー  -->
+<% if end_user_signed_in? %>
+<%= render "shared/header_user_after_login" %>
+<% else %>
+<%= render "shared/header_user_before_login" %>
+<% end %>
+<!-- ヘッダーここまで -->
+
 <!-- 管理者側からのユーザー編集ページ -->
 <div>
   <%= form_with model: @user, local: true do |f| %>
@@ -94,3 +102,11 @@
 
 <%= link_to "Back", :back %>
 </div>
+
+<!-- フッター -->
+<% if end_user_signed_in? %>
+<%= render "shared/footer_user_after_login" %>
+<% else %>
+<%= render "shared/footer_user_before_login" %>
+<% end %>
+<!-- フッダー -->
