--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -66,4 +66,10 @@
 					</div>
 
 <!-- フッター -->
-<%= render "shared/footer_user" %>
+<% if end_user_signed_in? %>
+<%= render "shared/footer_user_after_login" %>
+<% else %>
+<%= render "shared/footer_user_before_login" %>
+<% end %>
+<!-- フッダー -->
+
