--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
 /* エンドユーザ側 */
 .login_contents {
   margin-bottom: 50px;
@@ -66,3 +67,31 @@
     border-top: none !important;
   }
 }
+
+/* フッター */
+html {
+  min-height: 100%;
+  position: relative;
+}
+body {
+  margin-bottom: 100px;
+}
+
+footer{
+  bottom: 0;
+  margin-bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: #fff;
+  position: absolute;
+  }
+
+.test{
+  border-bottom: 1px solid #DCDCDC;
+}
+.test:last-child{
+  border-bottom: none;
+}
+
+
+
