--- a/app/views/end_users/admin_show.html.erb
+++ b/app/views/end_users/admin_show.html.erb
@@ -55,6 +55,7 @@
       </div>
     </div>
   </div>
+  <%= link_to "削除", "/admin/end_users/#{@user.id}/destroy", class: "btn btn-danger", method: :post, "data-confirm" => "本当に削除しますか？" %>
 
   <div>
     <h3 style="margin-bottom: 50px">購入履歴</h3>
