--- a/app/views/order_histories/thanks.html.erb
+++ b/app/views/order_histories/thanks.html.erb
@@ -1,8 +1,22 @@
-<%= render 'shared/header_user_after_login' %>
+<!-- ヘッダー  -->
+<% if end_user_signed_in? %>
+<%= render "shared/header_user_after_login" %>
+<% else %>
+<%= render "shared/header_user_before_login" %>
+<% end %>
+<!-- ヘッダーここまで -->
+
 <div class="thankyou">
   <p class="thanks-message">ご注文ありがとうございます！</p>
   <p class="thanks-message">商品到着まで今しばらくお待ちください!!</p>
 </div>
 <%= link_to "TOPへ戻る" ,root_path %>
 <%= link_to "マイページへ", "/users/1" %>
-<%= render 'shared/footer_user' %>
+
+<!-- フッター -->
+<% if end_user_signed_in? %>
+<%= render "shared/footer_user_after_login" %>
+<% else %>
+<%= render "shared/footer_user_before_login" %>
+<% end %>
+<!-- フッダー -->
