--- a/app/views/shared/_footer_user_before_login.html.erb
+++ b/app/views/shared/_footer_user_before_login.html.erb
@@ -1,10 +1,11 @@
 <footer>
 	<div class=" container-fluid">
 		<div class="row">
-			<div class="col-xs-12"></div>
-			<div class="text-center">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4">
 				<%= link_to image_tag('logo.png', :size => '250x100'), root_path %>
 			</div>
+			<div class="col-xs-4"></div>
 		</div>
 	</div>
 </footer>
