--- a/app/assets/stylesheets/order_histories.scss
+++ b/app/assets/stylesheets/order_histories.scss
@@ -88,3 +88,18 @@
   padding: 80px;
 }
 
+/* order_histories/index */
+.order_history_head {
+  border-bottom: solid 1px gray;
+  margin: 30px 0;
+}
+
+.order_detail_box {
+  padding: 30px 20px 0 0;
+}
+
+.index_title {
+  text-align: center;
+  font-size: 30px;
+  padding: 20px 0;
+}
