--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,9 @@
+<% if administrator_signed_in? %>
+<%= render "shared/header_admin_after_login" %>
+<% else %>
+<%= render "shared/header_admin_before_login" %>
+<% end %>
+
 <div class="container">
     <%= form_for(@product) do |f| %>
 
@@ -48,3 +54,5 @@
     <%= f.submit '完了', class: 'btn btn-primary btn-block' %>
     <% end %>
 </div>
+
+<%= render "shared/footer_admin" %>
