--- a/app/views/products/admin_index.html.erb
+++ b/app/views/products/admin_index.html.erb
@@ -7,32 +7,48 @@
 <!-- ヘッダー ここまで -->
 
 
-<table>
-	<tdbody>
 		<% @products.each do |product| %>
-		<tr>
-			<td>ID<%= product.id %></td>
-			<% if product.product_status == "on_sale" %>
-			    <td><%= image_tag product.image_id.url %></td> <!-- carierwaveの画像を表示  -->
-			<% else %>
-			    <td><%= image_tag "sold_out.jpg", size: "200x200" %></td>
-			<% end %>
+		<%= link_to admin_product_path(product.id), :style => "color: black;" do %>
+		<div style="border: 1px solid black; padding: 5px;">
+		<div class="row">
+			<div class="col-xs-4">
+				<div style="padding-left: 10px;">
+				<div>ID<%= product.id %></div>
+			<% if product.product_status == "not_on_sale" %>
+			    <%= image_tag "soldout.png", size: "190x190" %>
+			<% elsif product.stock(product.id) == 0%>
+                <%= image_tag "soldout.png", size: "190x190" %>
+            <% else %>
+                  <%= image_tag product.image_id.url %>
+            <% end %>
+		       </div>
+		     </div>
 
-            <td><%= product.cd_name %></td>
-            <td><%= product.artist_name %></td>
-			<td><%= number_to_currency(product.price) %></td>
+            <div class="col-xs-4">
+            	<div style="padding-top: 30px;">
+            <%= product.cd_name %><br>
+            <%= product.artist_name %><br>
+            <%= "在庫数#{product.stock(product.id)}" %><br>
+			<%= "#{number_to_currency(product.price)} (税別価格)" %><br>
 			<% if product.product_status == "on_sale" %>
-			    <td><span>発売中</span></td>
+			    <span>発売中</span>
 			<% else %>
-			    <td><span>販売停止中</span></td>
-			<% end %>
+			    <span>販売停止中</span>
+			    <% end %>
+			    </div>
+			</div>
 
-			<td><%= product.is_deleted %></td>
-			<td><%=link_to "在庫追加", new_arrival_history_path(product.id) %></td>
-		</tr>
-		<% end %>
-	</tdbody>
-</table>
+            <div class="col-xs-4">
+            	<div style="padding-top: 65px;">
+			<%=link_to "在庫追加", new_arrival_history_path(product.id), :class => "btn btn-primary" %>
+			<%=link_to "編集", edit_product_path(product.id), :class => "btn btn-success" %>
+			<%= link_to "削除", "/products/#{product.id}/delete", method: :delete, "data-confirm" => "本当に商品を削除しますか？", :class => "btn btn-danger" %>
+			    </div>
+		    </div>
+		</div>
+	</div>
+	<% end %>
+	<% end %>
 
 <!-- フッター  -->
 <%= render "shared/footer_admin" %>
