--- a/app/views/end_users/index.html.erb
+++ b/app/views/end_users/index.html.erb
@@ -14,4 +14,4 @@
     <%= paginate(@users) %>
   </div>
 </div>
-<%= render "shared/footer_admin" %>
+<%= render "shared/footer_admin_before_login" %>
