--- a/app/views/end_users/registrations/edit.html.erb
+++ b/app/views/end_users/registrations/edit.html.erb
@@ -88,4 +88,4 @@
   <%= link_to "マイページへ戻る", :back, :class => "signup_contents" %>
 </div>
 
-<%= render "shared/footer_user" %>
+<%= render "shared/footer_user_after_login" %>
