--- a/app/views/arrival_histories/index.html.erb
+++ b/app/views/arrival_histories/index.html.erb
@@ -1,3 +1,9 @@
+<% if end_user_signed_in? %>
+<%= render "shared/header_admin_after_login" %>
+<% else %>
+<%= render "shared/header_admin_before_login" %>
+<% end %>
+
 <h2>入荷履歴一覧</h2>
     <div class="col-xs-12">
         <% @arrival_histories.each do |arrival_history| %>
@@ -22,3 +28,5 @@
             </div>
         <% end %>
     </div>
+
+<%= render "shared/footer_admin" %>
