--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -80,4 +80,4 @@
     <%= render "devise/shared/links" %>
   </div>
 </div>
-<%= render "shared/footer_user" %>
+<%= render "shared/footer_user_before_login" %>
