--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -20,7 +20,7 @@
 			   <div class="col-xs-3"><%= link_to "入荷履歴", arrival_histories_path %></div>
 		       <div class="col-xs-3"><%= link_to "新規商品追加", new_product_path %></div>
 		       <div class="col-xs-3"><%= link_to "問い合わせ", "#" %></div> <!-- 未実装の為リンクなし -->
-               <div class="col-xs-4"><%= link_to "商品一覧", admin_products_path %></div>
+               <div class="col-xs-4"><%= link_to "商品一覧", admin_root_path %></div>
 			   <div class="col-xs-4"><%= link_to "ユーザー一覧", end_users_path %></div>
 		       <div class="col-xs-4"><%= link_to "ログアウト", destroy_administrator_session_path, method: :delete %></div>
 		</div>
